...
        
        cell.likeButton.addTarget(self, action: #selector(likeButtonClicked), for: .touchUpInside)
    }
    
    override func awakeFromNib() {
          super.awakeFromNib()
          likeButton.accessibilityIdentifier = "like_button"
      }
    
    override func prepareForReuse() {
        super.prepareForReuse()
        cellImage.kf.cancelDownloadTask()
        cellImage.image = nil
...
